unpackaged/objects/SC_Order__c.object
<CustomObject>
    <customHelpPage>pagination</customHelpPage>
    <fields>
        <fullName>AUTO__c</fullName>
        <displayFormat>AT-{000000000}</displayFormat>
        <externalId>true</externalId>
        <inlineHelpText>Hello !!</inlineHelpText>
        <label>AUTO</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>New_Field__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>New Field</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Test_New_One__c</fullName>
        <label>Test New One</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>SC Order</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>SC Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SC Orders</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>